--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 body,
 html {margin:0;
       background: red;
-      background-image: url("file:///C:/Users/Sierra104/Pictures/pngtree-modern-sci-fi-blue-circuit-background-picture-image_1432816.jpg");
+      background-image: url("bg.jpg");
       background-size: contain;
       font-family: monospace;
       letter-spacing: 0.65px;
