--- a/style.css
+++ b/style.css
@@ -10,8 +10,10 @@ html {margin:0;
       font-family: monospace;
       letter-spacing: 0.65px;
       font-size: 15px;
-      color: lime;
+      color:lime;
       cursor: default;}
+
+#BEST{color:red}
 
 a {text-decoration: none;
   color:blue;
